<resources>
    <string name="app_name">CMRS-学生端</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sunnysky Software</string>
    <string name="nav_header_subtitle">sunnysky1226@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="menu_home">主页</string>
    <string name="menu_uploader">菜单投票</string>
    <string name="menu_information_bar">申请通道</string>

    <string name="username_label">用户名：</string>
    <string name="pw_label">密码：</string>
    <string name="login_label">登录</string>
    <string name="exit_label">退出</string>
    <string name="visualization_pw_label">显示密码</string>
    <string name="reg_label">注册</string>
    <string name="remember_information">记住信息</string>
    <string name="login_success">登陆成功</string>
    <string name="network_failure">网络错误，请重试</string>
    <string name="login_msg_head">用户系统</string>
    <string name="login_failure">登陆失败</string>
    <string name="confirm">确认</string>
    <string name="cannot_connect">无法连接至服务器</string>
    <string name="connection_established">已连接至服务器</string>
    <string name="file_transferred">文件传输成功</string>
    <string name="ftp_failure">FTP文件传输错误，请重试</string>
    <string name="file_transferring">文件传输中</string>
    <string name="logining_in">登录中</string>
    <string name="menu_not_published">菜单暂未发布</string>
    <string name="name">名称</string>
    <string name="category">类别</string>
    <string name="option">操作</string>
    <string name="file_sys">文件系统</string>
    <string name="synchornizing">数据同步中</string>
    <string name="synchornized">同步成功</string>
    <string name="upload_btn">上传已选菜单</string>
    <string name="uploading">上传中</string>
    <string name="upload_success">上传成功！</string>
    <string name="pwc_label">确认密码</string>
    <string name="registering">注册中</string>
    <string name="pwd_check_failure">密码输入不一致</string>
    <string name="logout">登出</string>
    <string name="date">日期</string>
    <string name="menu">菜单</string>
    <string name="food">菜名</string>
    <string name="count_down">距离投票截止菜单发布还有</string>
    <string name="upload_req">上传申请数据</string>
    <string name="menu_published">已发布的菜单</string>
    <string name="feedback_channel">菜单评分</string>
    <string name="menu_history">历史菜单</string>
    <string name="send_feedback">上传评分</string>
    <string name="menu_selectable">可选菜单</string>
    <string name="send_menu">上传选择</string>
    <string name="send_rep">上传请求</string>
    <string name="server_failure">无法连接至服务器，请重试</string>
    <string name="upload">上传</string>
    <string name="selected">已选择</string>
    <string name="unselected">未选择</string>


</resources>