<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:stretchColumns="0,3"
        tools:context=".activities.RegisterActivity">

    <RelativeLayout>
        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@mipmap/user_icon_v4"
                android:layout_centerInParent="true"/>
    </RelativeLayout>

    <TableRow>
        <TextView />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RUN"
                android:minWidth="150dp"/>
        <TextView />

    </TableRow>

    <TableRow>
        <TextView />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pw_label"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RPW"
                android:minWidth="150dp"
        />
        <TextView />
    </TableRow>

    <TableRow>
        <TextView />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwc_label"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RPWC"
                android:minWidth="150dp"
        />
        <TextView />
    </TableRow>

    <TableRow>
        <TextView />

        <CheckBox android:id="@+id/rcb"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:onClick="onClickShow"
                  android:text="@string/visualization_pw_label"
        />

        <TextView />
    </TableRow>


    <TableRow>
        <TextView />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RETURN"
                android:onClick="onClickReturn"
                android:text="@string/exit_label"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRegister"
                android:text="@string/reg_label"/>
        <TextView />
    </TableRow>


</TableLayout>