<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.request_channel.ChannelFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_published"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_rep"
            android:textColor="@color/teal_700"
            android:textSize="15sp"
            android:id="@+id/sendReq"
            android:layout_gravity="center_horizontal"
            app:icon="@android:drawable/stat_sys_upload"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TABLE"
                android:stretchColumns="0,1,2">

            <TableRow
                    android:id="@+id/BASE">

                <TextView
                        android:textSize="24dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/date" />

                <TextView
                        android:textSize="24dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/food"/>

                <TextView
                        android:textSize="24dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/option"/>

            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>