<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.feedback_channel.FeedbackChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_history"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/sendReq"
                app:icon="@android:drawable/stat_sys_upload"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        />

        <ScrollView
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TABLE"
                    android:stretchColumns="0,1">

                <TableRow
                        android:id="@+id/BASE">

                    <TextView
                            android:textSize="24dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/food"/>

                    <TextView
                            android:textSize="24dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/option"/>

                </TableRow>

            </TableLayout>

        </ScrollView>

</LinearLayout>