<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.menu_uploader.UploaderFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TABLE"
                android:stretchColumns="0,1,2">

            <TableRow
                    android:id="@+id/BASE">

                <TextView
                        android:textSize="24dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/name" />

                <TextView
                        android:textSize="24dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/category"/>

                <TextView
                        android:textSize="24dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/option"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>